2019-08-09  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/hide/test_gh_issue_5.R: Temporarily moved test
	which upsets two of the rhub builders
	* inst/tinytest/hide/test_gh_issue_84.R: Ditto
        * inst/tinytest/hide/test_gh_issue_96.R: Ditto
        * inst/tinytest/hide/test_validate.R: Ditto
 	
2019-08-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/anytime.cpp: Complement existing sformats[] with '%e' variants
	to allow single-digit days to be parse by Boost date_time

2019-08-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/anytime.R (anytime,anydate,utcdate): Rewritten using S3 dispatch
	* R/formats.R (iso8601,rfc2822,rfc3339): Ditto
	* NAMESPACE: Register new S3 methods

	* inst/tinytest/test_all_formats.R: Tweaking tests to accomodate rhub
	* inst/tinytest/test_bulk.R: Idem
	* inst/tinytest/test_gh_issue_96.R: Idem
	* inst/tinytest/test_validate.R: Idem
	
2019-07-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/anytime.cpp (fmt): Renamed from format() to avoid clashes
	* src/RcppExports.cpp (_anytime_fmt): Idem
	* R/RcppExports.R (fmt): Idem
	* inst/tinytest/test_simple.R: Ditto in test use
	* inst/tinytest/test_all_formats.R: Idem

2019-07-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_simple.R: A few more simple tests

2019-07-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.5

	* vignettes/rmd/anytime-intro.Rmd: More edits
	* vignettes/anytime-intro.pdf: Idem

	* inst/tinytest/test_gh_issue_96.R: More polish
	* inst/tinytest/test_useR.R: Idem

	* local/test_useR.R: Deactivated as it fails at Travis
	
2019-07-27  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (utctime): Account for difference to UTC when useR=TRUE
	* inst/tinytest/test_useR.R: New test file for useR=TRUE

	* inst/tinytest/test_all_formats.R: Condition a few more tests